syntax = "proto3";

package usermgmt_op6_rest_to_grpc_chan;

option go_package = "github.com/juanmanuel0963/go_grpc_usermgmt/v5;go_grpc_usermgmt_op6_rest_to_grpc_chan";

service UserManagement {
  rpc CreateNewUser (NewUser) returns (User) {}
  rpc GetUsers (GetUsersParams) returns (UsersList) {}
}

message NewUser {
  string name = 1;
  int32 age = 2;
}

message User {
  string name = 1;
  int32 age = 2;
  int32 id = 3; 
}

message GetUsersParams {
  string name = 1;
  int32 age = 2;
}

message UsersList {
  repeated User users = 1; 
}